# atOS

./: .gitignore  CREDITS  LICENSE  Makefile  README.md  main.js  package-lock.json  package.json  run.bat  runUI.bat
.github/: CHANGELOG.md
.github/workflows/: build.iso.yml
DOCS/: ASTRAC_AC.md  ASTRAC_ASM.md  BATSH.md  DEBUGGING.md  DRIVER_IMPLEMENTATION.md  LIBRARY_DEVELOPING.md  PROC_COM.md  PROGRAM_DEVELOPING.md  README.md  SERIAL_PORTS.md
HOME/: ATUI.CNF  JOT.CNF  SEND.SH  TEST.TGI
HOME/IMAGES/: AC.TGI  CREATION.ATZ  CREATION.TGI
HOME/SRC/ASTRAC/: 16b_vbr.dmp  CFTEST.AC  CFTEST.AH  CFTEST.ASM
HOME/SRC/BOOT/: MAKE_VBR.SH  VBR.ASM
HOME/SRC/KRNL/: KRNL_NTR.ASM
HOME/SRC/TEST/: TEST.ASM
SCRIPTS/: CLEAN.sh  INSTALL_DEPS.sh  README.md  SERIAL_LOGGER.sh  SERIAL_SAVER.sh  SERIAL_SEND.sh
SOURCE/: ATOSH.ENV_VARS  ATOSH.HELP  ATOSH.PATH  ATOSHELL.SH  ENV.VARS  README.md  TSHELL.SH
SOURCE/BOOTLOADER/: DISK_VBR.asm  README.md
SOURCE/FILES/: LOAD_LIBRARY.SH
SOURCE/FILES/ASM/: TEST.ASM
SOURCE/KERNEL/: KERNEL.c  KERNEL_ENTRY.asm  README.md  RTOSKRNL.c  TODO
SOURCE/KERNEL/16-BIT-BIOS/: KERNEL_ENTRY_DATA.inc
SOURCE/KERNEL/32RTOSKRNL/: KERNEL.h  README.md  RTOSKRNL.h
SOURCE/LIBRARIES/: LIB.ld  LIB_SHARE.h  README.md
SOURCE/LIBRARIES/ARGHAND/: ARGHAND.c  ARGHAND.h  README.md  SOURCES
SOURCE/LIBRARIES/ATGL/: ATGL.c  ATGL.h  ATGL_DEFS.h  ATGL_EVENT.c  ATGL_GRAPHICS.h  ATGL_IMAGES.h  ATGL_INPUT.h  ATGL_INTERNAL.h  ATGL_NODE.c  ATGL_NODES.h  ATGL_SCREEN.h  ATGL_THEME.c  ATGL_TYPES.h  ATGL_WIDGETS.c  ATGL_WINDOW.h  README.md  SIN_TABLE_360.table  SOURCES
SOURCE/LIBRARIES/ATHASH/: BASE64.c  BASE64.h  README.md  SHA1.c  SHA1.h  SOURCES
SOURCE/LIBRARIES/ATRC/: ATRC.h  CMakeLists.txt  README.md
SOURCE/LIBRARIES/ATUI/: ATUI.c  ATUI.h  ATUI_CONF.c  ATUI_MENU.c  ATUI_MENU.h  ATUI_PANEL.c  README.md  (+7 more)
SOURCE/PROGRAMS/: README.md  USER_PROGRAMS.ld  USER_PROGRAMS.txt
SOURCE/PROGRAMS/ASTRAC/: AC_FH.h  ASTRAC.c  ASTRAC.h  CMakeLists.txt  FULL_BUILD.c  OP_CODES.h  README.md
SOURCE/PROGRAMS/ASTRAC/ASSEMBLER/: AMAIN.c  ASSEMBLER.h  AST.c  GEN.c  KEYWORDS  KEYWORDS.txt  LEXER.c  MNEMONICS.h  MNEMONIC_LIST.h  OPTIMIZE.c  README.md  VERIFY_AST.c
SOURCE/PROGRAMS/ASTRAC/COMPILER/: AST.c  COMPILER.h  COMPMAIN.c  GEN.c  LEX.c  PARSER.c  README.md  VERIFY_AST.c
SOURCE/PROGRAMS/ASTRAC/DISSASEMBLER/: DISMAIN.c  DISSASEMBLER.h
SOURCE/PROGRAMS/ASTRAC/SHARED/: PREPROCESS.c
SOURCE/PROGRAMS/JOT/: CMakeLists.txt  JOT.CNF  JOT.c  README.md
SOURCE/PROGRAMS/SYS_PROGS/: CMakeLists.txt  LIBRARIES  PINFO.c  README.md  TIME.LIBS  TIME.SOURCES  TIME.c
SOURCE/PROGRAMS/SYS_PROGS/AMPLITE/: AMPLITE.BDEF  AMPLITE.SOURCES  AMPLITE.c  AMPLITE.h
SOURCE/PROGRAMS/SYS_PROGS/CHESS/: CHESS.SOURCES  CHESS.c
SOURCE/PROGRAMS/SYS_PROGS/CLOCK/: CLOCK.SOURCES  CLOCK.c
SOURCE/PROGRAMS/SYS_PROGS/CONFS/: TIME.CNF
SOURCE/PROGRAMS/SYS_PROGS/CONFS/JOT/: AC_JOT.CNF  ASM_JOT.CNF  C_JOT.CNF  JOT.CNF  SH_JOT.CNF
SOURCE/PROGRAMS/SYS_PROGS/CP/: CP.HELP  CP.SOURCES  CP.c
SOURCE/PROGRAMS/SYS_PROGS/CPCD/: CPCD.SOURCES  CPCD.c  README.md
SOURCE/PROGRAMS/SYS_PROGS/DEL/: DEL.HELP  DEL.SOURCES  DEL.c
SOURCE/PROGRAMS/SYS_PROGS/DIR/: DIR.SOURCES  DIR.c
SOURCE/PROGRAMS/SYS_PROGS/ED/: ED.SOURCES  ED.c
SOURCE/PROGRAMS/SYS_PROGS/HASH/: HASH.LIBS  HASH.SOURCES  HASH.c
SOURCE/PROGRAMS/SYS_PROGS/IMG/: IMG.BDEF  IMG.LIBS  IMG.SOURCES  IMG.c
SOURCE/PROGRAMS/SYS_PROGS/JAMMER/: JAMMER.LIBS  JAMMER.SOURCES  JAMMER.c  JAMMER.h
SOURCE/PROGRAMS/SYS_PROGS/JOT/: JOT.BDEF  JOT.LIBS  JOT.SOURCES  JOT.c
SOURCE/PROGRAMS/SYS_PROGS/KILL/: KILL.SOURCES  KILL.c
SOURCE/PROGRAMS/SYS_PROGS/METRONOME/: METRONOME.HELP  METRONOME.SOURCES  METRONOME.c
SOURCE/PROGRAMS/SYS_PROGS/MKDIR/: MKDIR.HELP  MKDIR.SOURCES  MKDIR.c
SOURCE/PROGRAMS/SYS_PROGS/MV/: MV.HELP  MV.SOURCES  MV.c
SOURCE/PROGRAMS/SYS_PROGS/PAINT/: PAINT.BDEF  PAINT.SOURCES  PAINT.c
SOURCE/PROGRAMS/SYS_PROGS/PIANO/: PIANO.SOURCES  PIANO.c
SOURCE/PROGRAMS/SYS_PROGS/PINFO/: PINFO.LIBS  PINFO.SOURCES  PINFO.c
SOURCE/PROGRAMS/SYS_PROGS/PONG/: PONG.SOURCES  PONG.c
SOURCE/PROGRAMS/SYS_PROGS/RMDIR/: RMDIR.HELP  RMDIR.SOURCES  RMDIR.c
SOURCE/PROGRAMS/SYS_PROGS/SANDBOX/: SANDBOX.LIBS  SANDBOX.SOURCES  SANDBOX.c
SOURCE/PROGRAMS/SYS_PROGS/SHUTTLE/: README.md  SHUTTLE.HELP  SHUTTLE.SOURCES  SHUTTLE.c
SOURCE/PROGRAMS/SYS_PROGS/STRINGS/: STRINGS.HELP  STRINGS.SOURCES  STRINGS.c
SOURCE/PROGRAMS/SYS_PROGS/TIME/: TIME.SOURCES  TIME.c
SOURCE/PROGRAMS/SYS_PROGS/TMAN/: TMAN.BDEF  TMAN.LIBS  TMAN.SOURCES  TMAN.c
SOURCE/PROGRAMS/SYS_PROGS/TOUCH/: TOUCH.HELP  TOUCH.SOURCES  TOUCH.c
SOURCE/PROGRAMS/SYS_PROGS/TSHELL/: ANSI.c  AUTOCOMPLETE.c  AUTOCOMPLETE.h  BATSH.c  BATSH.h  DIR.c  INPUTS.c  TOUTPUT.c  TSHELL.BDEF  TSHELL.LIBS  TSHELL.SOURCES  TSHELL.c  TSHELL.h
SOURCE/PROGRAMS/SYS_PROGS/TSHELL/CMD/: AC97.c  ALL.h  CD.c  COLOUR.c  DIR.c  MISC.c  MKDIR.c  RMDIR.c  SLEEP.c  TAIL.c  TYPE.c
SOURCE/PROGRAMS/SYS_PROGS/ZIP/: ZIP.LIBS  ZIP.SOURCES  ZIP.c
SOURCE/RUNTIME/: README.md  RUNTIME.c  RUNTIME.h
SOURCE/STD/: ARG.h  ASM.h  ASSERT.h  ATOSMINDEF.h  AUDIO.c  AUDIO.h  BINARY.h  BITMAP.c  BITMAP.h  COMPORT.c  COMPORT.h  DEBUG.c  DEBUG.h  FS_DISK.c  FS_DISK.h  GRAPHICS.c  GRAPHICS.h  IO.c  IO.h  MATH.c  MATH.h  MEM.c  MEM.h  PROC_COM.c  PROC_COM.h  README.md  RUNTIME.h  STRING.c  STRING.h  TASK.h  TIME.c  TIME.h  TYPEDEF.h
SOURCE/SYS_SRC/: README.md  RUNTIME.AC  TEST.INC
TESTS/: Makefile  test_arghand  test_arghand.c  test_bitmap  test_bitmap.c  test_math  test_math.c  test_mem  test_mem.c  test_string  test_string.c
TESTS/harness/: test.h
TESTS/stubs/: mem_test_stubs.c  os_stubs.c
TOOLS/: makefile
TOOLS/DUMP_MODES/: DUMP_MODES.c
TOOLS/VBE/: VBE.c
atget/downloableFiles/: downloableFiles.json
files/: file.json
src/: AT-Krypt.js  cmdlets.js  decryptData.js  example.js  findItem.js  gtn.js  luaRunMain.js  readData.js  remove.js  runSnake.js  runTetris.js  snake.js  tetris.js  writeData.js
src/tetris/: Start.bat  tetris.js
src/text editor/: textEditorMain.js
src/timer/: timer.js
ui/: UImain.js  index.css  index.html  index.js  package.json
(+144 files in other folders)
